# ds-tg-bot-on-Koyeb

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.koyeb/: app.yaml
tests/: __init__.py  test_integration.py  test_main.py
